# plugins

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  nightly.yml
arrow/: AGENTS.md  Cargo.toml  README.md
arrow/src/: lib.rs
crypto/: Cargo.toml  README.md
crypto/src/: lib.rs
csv/: AGENTS.md  Cargo.toml
csv/src/: lib.rs
egui/: Cargo.toml
egui/src/: lib.rs  ui.rs  window.rs
hash/: Cargo.toml
hash/src/: lib.rs
image/: Cargo.toml
image/src/: analysis.rs  composite.rs  draw.rs  inspect.rs  io.rs  lib.rs  transform.rs
jiff/: Cargo.toml
jiff/src/: access.rs  arith.rs  calendar.rs  construct.rs  convert.rs  format.rs  lib.rs  parse.rs  predicate.rs
mqtt/: AGENTS.md  Cargo.toml
mqtt/src/: lib.rs
msgpack/: Cargo.toml
msgpack/src/: lib.rs
oxigraph/: Cargo.toml  README.md
oxigraph/src/: lib.rs
plotters/: Cargo.toml
plotters/src/: lib.rs
polars/: AGENTS.md  Cargo.toml  README.md
polars/src/: lib.rs
protobuf/: AGENTS.md  Cargo.toml
protobuf/src/: convert.rs  inspect.rs  lib.rs  schema.rs
random/: Cargo.toml  README.md
random/src/: lib.rs
regex/: Cargo.toml  README.md
regex/src/: lib.rs
selkie/: Cargo.toml  README.md
selkie/src/: lib.rs
svg/: Cargo.toml
svg/src/: lib.rs
syn/: Cargo.toml
syn/src/: lib.rs
tests/: crypto.lisp  csv.lisp  hash.lisp  image.lisp  mqtt.lisp  msgpack.lisp  oxigraph.lisp  plotters.lisp  protobuf.lisp  random.lisp  regex.lisp  svg.lisp  syn.lisp  toml.lisp  tree-sitter.lisp  vulkan.lisp  xml.lisp  yaml.lisp
tls/: AGENTS.md  Cargo.toml  README.md
tls/src/: lib.rs
toml/: AGENTS.md  Cargo.toml
toml/src/: lib.rs
tree-sitter/: Cargo.toml
tree-sitter/src/: lib.rs
vulkan/: AGENTS.md  Cargo.toml
vulkan/shaders/: vecadd.comp  vecadd.spv
vulkan/src/: context.rs  decode.rs  dispatch.rs  lib.rs  shader.rs
wayland/: AGENTS.md  Cargo.toml
wayland/src/: buffer.rs  capture.rs  layer.rs  lib.rs  state.rs  toplevel.rs
xml/: Cargo.toml  README.md
xml/src/: lib.rs
yaml/: AGENTS.md  Cargo.toml
yaml/src/: lib.rs
