[package]
name = "elle-hash"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
elle-plugin = { git = "https://github.com/elle-lisp/elle", branch = "w2" }

# Cryptographic hashes (RustCrypto)
digest = "0.10"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
blake2 = "0.10"

# BLAKE3 (official crate)
blake3 = "1"

# Non-cryptographic hashes
crc32fast = "1"
xxhash-rust = { version = "0.8", features = ["xxh3", "xxh64", "xxh32"] }
