[package]
name = "elle-image"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
elle-plugin = { path = "../../elle-plugin" }
image = { version = "0.25", default-features = false, features = [
    "png", "jpeg", "gif", "webp", "tiff", "bmp", "ico", "qoi",
] }
imageproc = "0.25"
