[package]
name = "elle-plotters"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
elle-plugin = { path = "../../elle-plugin" }
plotters = { version = "0.3", default-features = false, features = [
    "svg_backend", "bitmap_backend", "ttf",
    "area_series", "line_series", "point_series",
    "full_palette",
] }
png = "0.17"
