[package]
name = "elle-tls"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
elle-plugin = { git = "https://github.com/elle-lisp/elle", branch = "w2" }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "logging", "std"] }
rustls-native-certs = "0.8"
rustls-pki-types = { version = "1", features = ["std"] }
webpki-roots = "0.26"

[dev-dependencies]
rcgen = "0.13"
