[package]
name = "elle-tree-sitter"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
elle-plugin = { git = "https://github.com/elle-lisp/elle", branch = "main" }
tree-sitter = "0.24"
tree-sitter-c = "0.23"
tree-sitter-rust = "0.23"
streaming-iterator = "0.1"

[build-dependencies]
cc = "1"
