[package]
name = "elle-vulkan"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
elle-plugin = { path = "../../elle-plugin" }
ash = { version = "0.38", default-features = false, features = ["loaded"] }
gpu-allocator = { version = "0.27", features = ["vulkan"] }
libc = "0.2"
